# AI-Desktop-Pet

./: .gitignore  README.md  UpgradeLog.htm  pyproject.toml  test_chat.py  test_websocket.py
Assets/: AI-Desktop-Pet.unity
Assets/Scenes/: AI-Desktop-pet.unity  SampleScene.unity
Assets/_Project/Animations/: GermanShepherdOverride.overrideController  HuskyOverride.overrideController  LabradorOverride.overrideController  New Animator Controller.controller  OrangeCatOverride.overrideController  PetAnimator.controller  TabbyCatOverride.overrideController  TuxedoCatOverride.overrideController
Assets/_Project/Scenes/: PetTest.unity
Assets/_Project/Scripts/: WebSocketManager.cs
CommendJS/: index.js  package.json
CommendJS/commands/: config.js  help.js  memory.js  status.js  version.js
CommendJS/utils/: env.js  validator.js
CppNative/: CMakeLists.txt
CppNative/include/: window_utils.h
CppNative/src/: exports.cpp
Document/: 01-项目搭建与环境配置.md  02-Unity前端交互层.md  03-Python-AI大脑层.md  04-C++系统底层.md  05-美术与资源.md  06-交互模式与主动对话设计.md  07-记忆系统创新设计.md  WebSocket部分参考文档.md  计划书.md
PetModel/: Corgi.blend  Corgi.blend1  GermanShepherd.blend  GermanShepherd.blend1  Husky.blend  Husky.blend1  Labrador.blend  Labrador.blend1  OrangeCat.blend  OrangeCat.blend1  TabbyCat.blend  TabbyCat.blend1  TuxedoCat.blend  TuxedoCat.blend1
ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset
PythonAgent/: .env.example  config.yaml  requirements.txt
PythonAgent/src/: server.py
PythonAgent/src/agent/: __init__.py  core.py
PythonAgent/src/handlers/: __init__.py  (+4 more)
(+41 files in other folders)
