[project]
name = "ai-desktop-pet"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "llm>=0.31.1",
    "memory>=1.0.0",
    "perception>=0.9.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "tools>=1.0.30",
    "websockets>=16.1",
]
